tighten up the preformatted render

--- a/speedrack/templates/config.html.jinja
+++ b/speedrack/templates/config.html.jinja
@@ -30,13 +30,9 @@
   </ul>
   {% if display_data == "raw" %}
   <p><code>{{ config['CONFIG_YAML'] }}</code></p>
-  <pre class="prettyprint lang-yaml">
-{{ filer.get_file_summary(config['CONFIG_YAML'], max_size = none) }}
-  </pre>
+  <pre class="prettyprint lang-yaml">{{ filer.get_file_summary(config['CONFIG_YAML'], max_size = none) }}</pre>
   {% elif display_data == "parsed" %}
-  <pre class="prettyprint lang-python">
-{{ yaml_config }}
-  </pre>
+  <pre class="prettyprint lang-python">{{ yaml_config }}</pre>
   {% endif %}
 
 </div>
