--- a/speedrack/templates/helpers/file.html.jinja
+++ b/speedrack/templates/helpers/file.html.jinja
@@ -4,16 +4,12 @@
   {%- if filer.is_file(file_name) and filer.get_size(file_name) %}
     {%- set file_is_big = filer.get_size(file_name) > max_size %}
     <pre>{{ filer.get_file_summary(file_name, summary_size) }}</pre>
-    {%- if file_is_big %}
     <div class="alert alert-info">
+      {%- if file_is_big %}
       <h4 class="alert-heading">Truncated at {{ summary_size }} bytes (of {{ filer.get_humanized_size(file_name) }})</h4>
-      <p>Whole file: <code>{{ file_name }}</code></p>
+      {%- endif %}
+      <p><code>{{ file_name }}</code></p>
     </div>
-    {%- else %}
-    <div class="alert alert-info">
-      <p>Whole file: <code>{{ file_name }}</code></p>
-    </div>
-    {%- endif %}
   {%- else %}
     <pre>[Couldn't find file]</pre>
   {%- endif -%}
