--- a/speedrack/templates/_single_task.html.jinja
+++ b/speedrack/templates/_single_task.html.jinja
@@ -7,7 +7,7 @@
 
           <div class="hero-unit">
             <h1>{{ config['APP_NAME'] }}</h1>
-            <p>Your basics are at hand and ready to go.</p>
+            <p>At hand and ready to go.</p>
           </div>
 
           {%- else -%} {# yes, display_task #}
