compress config and debug to one page

--- a/speedrack/templates/_single_task.html.jinja
+++ b/speedrack/templates/_single_task.html.jinja
@@ -65,7 +65,7 @@
             <div class="alert alert">
               <h4 class="alert-heading">Wait, what?</h4>
               Couldn't find any results or schedule information for this task.
-	      Is it <a href="{{ url_for('show_config') }}">misconfigured</a>?
+	      Is it <a href="{{ url_for('show_debug') }}">misconfigured</a>?
             </div>
 
             {%- else -%}
