--- a/speedrack/templates/debug.html.jinja
+++ b/speedrack/templates/debug.html.jinja
@@ -59,10 +59,10 @@
 
   {% elif display_data == "raw" %}
   <p><code>{{ config['CONFIG_YAML'] }}</code></p>
-  <pre class="prettyprint lang-yaml">{{ filer.get_file_summary(config['CONFIG_YAML'], max_size = none) }}</pre>
+  <pre>{{ filer.get_file_summary(config['CONFIG_YAML'], max_size = none) }}</pre>
 
   {% elif display_data == "parsed" %}
-  <pre class="prettyprint lang-python">{{ yaml_config }}</pre>
+  <pre>{{ yaml_config }}</pre>
 
   {% endif %}
 
