add params tab to single execution display

--- a/speedrack/templates/_single_task.html.jinja
+++ b/speedrack/templates/_single_task.html.jinja
@@ -141,6 +141,10 @@
                   {{ tab("stderr", "(no stderr)") }}
                 {% endif -%}
 
+                {%- if display_execution.has_params() %}
+                  {{ tab("opparams", "params") }}
+                {% endif %}
+
                 {%- if display_execution.execution_error() %}
                   {{ tab("operror", "OPERATION ERROR") }}
                 {% endif -%}
