--- a/speedrack/templates/layout.html.jinja
+++ b/speedrack/templates/layout.html.jinja
@@ -37,7 +37,7 @@
 <body>
 
   {% block nav %}
-  <div class="navbar navbar-fixed-top">
+  <div class="navbar navbar-fixed-top navbar-inverse">
     <div class="navbar-inner">
       <div class="container-fluid">
 
