add execution via sudo

--- a/speedrack/templates/help.html.jinja
+++ b/speedrack/templates/help.html.jinja
@@ -97,6 +97,9 @@ second - second to run on (0-59)</pre>
     <dt><code>spam</code></dt>
     <dd>Will send a notification email, win or lose.</dd>
 
+    <dt><code>sudo_user</code></dt>
+    <dd>Execute task as this user. (Requires password-free sudo execution privileges)
+
   </dl>
 
   <h2>Reload Config resets intervals</h2>
