add spam_fail setting and tests

--- a/speedrack/templates/help.html.jinja
+++ b/speedrack/templates/help.html.jinja
@@ -97,6 +97,9 @@ second - second to run on (0-59)</pre>
     <dt><code>spam</code></dt>
     <dd>Will send a notification email, win or lose.</dd>
 
+    <dt><code>spam_fail</code></dt>
+    <dd>Will send a notification email *on each and every failure*. If you set this to monitor a service for uptime, and that service goes down, expect speedrack to flood you with failure notifications.</dd>
+
     <dt><code>sudo_user</code></dt>
     <dd>Execute task as this user. (Requires password-free sudo execution privileges)
 
@@ -105,7 +108,18 @@ second - second to run on (0-59)</pre>
   <h2>Reload Config resets intervals</h2>
 
   <p><tt>Reload Config</tt> resets intervals.</p>
-  <p><em><tt>Reload Config</tt> resets intervals.</em> <tt>Reload Config</tt> resets intervals. <tt>Reload Config</tt> resets intervals. <tt>Reload Config</tt> resets intervals. <tt>Reload Config</tt> resets intervals. <tt>Reload Config</tt> resets intervals. <tt>Reload Config</tt> resets intervals. <tt>Reload Config</tt> resets intervals. <tt>Reload Config</tt> resets intervals. <tt>Reload Config</tt> resets intervals.</p>
+  <p>
+    <em><tt>Reload Config</tt> resets intervals.</em>
+    <tt>Reload Config</tt> resets intervals.
+    <tt>Reload Config</tt> resets intervals.
+    <tt>Reload Config</tt> resets intervals.
+    <tt>Reload Config</tt> resets intervals.
+    <tt>Reload Config</tt> resets intervals.
+    <tt>Reload Config</tt> resets intervals.
+    <tt>Reload Config</tt> resets intervals.
+    <tt>Reload Config</tt> resets intervals.
+    <tt>Reload Config</tt> resets intervals.
+  </p>
   <p><strong><tt>Reload Config</tt> resets intervals.</strong></p>
 
 </div>
