--- a/speedrack/templates/layout.html.jinja
+++ b/speedrack/templates/layout.html.jinja
@@ -76,8 +76,9 @@
   <div class="container-fluid">
     <hr>
     <p>
-      <a href="https://bitbucket.org/clinthowarth/speedrack">Speedrack</a> = &Pi; <a href="http://flask.pocoo.org/">Flask</a> &times; <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> &times; <a href="http://packages.python.org/APScheduler/">Advanced Python Scheduler</a> &times; elbow grease
+      <a href="https://bitbucket.org/clinthowarth/speedrack">Speedrack</a> v{{ config['version'] }} = &Pi; <a href="http://flask.pocoo.org/">Flask</a> &times; <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> &times; <a href="http://packages.python.org/APScheduler/">Advanced Python Scheduler</a> &times; elbow grease
     </p>
+    
   </div>
   {% endblock footer -%}
 
