--- a/speedrack/templates/help.html.jinja
+++ b/speedrack/templates/help.html.jinja
@@ -64,6 +64,11 @@ second - second to run on (0-59)</pre>
     <li>At 00:29:00, click <tt>Run Now</tt>, starts running.</li>
     <li>At 00:30:00, Speedrack executes the scheduled task, perhaps in parallel with the manually submitted one.</p>
   </ul>
+
+  <h3>Suspend</h3>
+  <p>
+    Using <tt>Suspend</tt> puts a task into a special queue which prevents it from being executed. This is useful when you know that a dependent service is going to be offline. <strong>Using <tt>Suspend</tt> reloads the config file, and reloading the config file resets intervals.</strong>
+  </p>
   
   <h2>Active/Inactive Tasks</h2>
 
