--- a/speedrack/templates/tasks.html.jinja
+++ b/speedrack/templates/tasks.html.jinja
@@ -15,7 +15,7 @@
           <table class="table table-striped {% if task_list|length > 10 %}table-condensed{% endif %}">
             {% for task in task_list %}
             <tr>
-              <td><a href="/tasks/{{ task.name }}">{{ task.name }}</a></td>
+              <td><a href={{ url_for("show_tasks", task_name=task.name) }}>{{ task.name }}</a></td>
               <td><span class="label label-{{ task.get_status()|status_severity }}">{{ task.get_status() }}</span></td>
             </tr>
             {% endfor %}
